<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Bazimoon</string>
	<string name="bazimoon">Bazimoon</string>
	<string name="loadpic">loadPic</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="close">close</string>
	<string name="next">بعدی</string>
	<string name="play_to_get_crown">بازی کن تا تاج پادشاهی ببری</string>
	<string name="save_your_money">پول هاتو ذخیره کن</string>
	<string name="login_pass">رمز عبورتو فراموش کردی؟</string>
	<string name="login_btn">ورود</string>
	<string name="txt_login">ورود</string>
	<string name="login_pic">login_pic</string>
	<string name="hint_username">نام کاربری</string>
	<string name="hint_password">رمز عبور</string>
	<string name="haveNo_account">تاحالا عضو نشدی؟</string>
	<string name="txt_signin">ثبت نام</string>
	<string name="sigin_pic">sigin_pic</string>
	<string name="phone_Number">شماره موبایل</string>
	<string name="have_account">قبلا عضو شدی؟</string>
	<string name="edit_phoneNum">ویرایش</string>
	<string name="txtGo_login"><u>ورود</u></string>
	<string name="txtGo_sigin"><u>ثبت نام</u></string>
	<string name="pick_profile">انتخاب عکس</string>
	<string name="repassword">تکرار رمز عبور</string>
	<string name="txtAdd_username_pic">نام خود را انتخاب کرده و یک عکس پروفایل اضافه کنید</string>
	<string name="txtTerms_Conditions">در صورت ثبت نام شما با شرایط و ضوابط بازیمون موافقت می کنید</string>
	<string name="txtPut_phoneNumber">لطفا شماره تلفن خود را وارد نمایید</string>
	<string name="txt_number">+989220669124</string>
	<string name="txt_ActivateCode">پیامکی حاوی کد فعال سازی به شماره شما ارسال شده است.</string>
	<string name="_00_00">00:00</string>
	<string name="Dont_receiveCode">کد را دریافت نکردید؟</string>
	<string name="menu">menu</string>
	<string name="mapbox_access_token">"pk.eyJ1IjoiYWN0aXZlZGV2IiwiYSI6ImNrNjJoMGc5ZzBjdjkzZnF3d2JhZG1hdTUifQ.eKen07Ie2PjeHzygnYEBaw"</string>
	<string name="search_map">جستجو کنید</string>
	<string name="red9_center">RED9 Center</string>
	<string name="btnsearch">btnSearch</string>
</resources>
