<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".SignUp">

	<ImageView
		android:id="@+id/signin_PicUp"
		android:layout_width="369dp"
		android:layout_height="107dp"
		android:contentDescription="@string/login_pic"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_login_pic" />

	<TextView
		android:id="@+id/txtSignin"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="36dp"
		android:layout_marginEnd="25dp"
		android:fontFamily="@font/b_titr"
		android:textStyle="bold"
		android:text="@string/txt_signin"
		android:textColor="@color/colorAccent"
		android:textSize="36sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.965"
		app:layout_constraintStart_toStartOf="@+id/guideline4"
		app:layout_constraintTop_toBottomOf="@+id/signin_PicUp" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_begin="155dp" />

	<ImageView
		android:id="@+id/signin_phonePic"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="121dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="120dp"
		android:contentDescription="@string/sigin_pic"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txtSignin"
		app:srcCompat="@drawable/ic_signup_pic" />

	<EditText
		android:id="@+id/get_phoneNum"
		android:layout_width="232dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="73dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="72dp"
		android:layout_marginBottom="60dp"
		android:autofillHints="phone"
		android:ems="10"
		android:fontFamily="@font/b_nazanin"
		android:gravity="center"
		android:hint="@string/phone_Number"
		android:inputType="phone"
		android:maxLength="11"
		android:textColorHint="@color/button_descrip"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/guideline"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.529"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/signin_phonePic"
		app:layout_constraintVertical_bias="0.257"
		tools:targetApi="o" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_end="140dp" />

	<Button
		android:id="@+id/btn_signin"
		android:layout_width="223dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:background="@drawable/btn_descrip"
		android:backgroundTint="@color/button_descrip"
		android:fontFamily="@font/b_titr"
		android:gravity="center"
		android:text="@string/next"
		android:textColor="@color/colorAccent"
		android:textSize="18sp"
		android:textStyle="bold"
		app:cornerRadius="20dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.503"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline"
		app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>