<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/relativeLayout2"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Description">


	<ImageView
		android:id="@+id/imageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:contentDescription="@string/loadpic"
		android:src="@drawable/ic_slot_machine"
		app:layout_constraintBottom_toTopOf="@+id/guideline2"
		app:layout_constraintHorizontal_bias="0.502"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.513" />

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="32dp"
		android:fontFamily="@font/iran_sans__regular"
		android:text="@string/save_your_money"
		android:textColor="@color/colorAccent"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline2"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView"
		app:layout_constraintVertical_bias="0.19" />

	<Button
		android:id="@+id/descrip_next"
		android:layout_width="223dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="32dp"
		android:layout_marginTop="32dp"
		android:layout_marginEnd="32dp"
		android:layout_marginBottom="32dp"
		android:background="@drawable/btn_descrip"
		android:backgroundTint="@color/button_descrip"
		app:cornerRadius="20dp"
		android:gravity="center"
		android:fontFamily="@font/iran_sans_bold"
		android:text="@string/next"
		android:textColor="@color/colorAccent"
		android:textSize="19sp"
		android:translationZ="3dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.503"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline2" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_end="145dp" />


	<View
		android:id="@+id/view"
		android:layout_width="7dp"
		android:layout_height="7dp"
		android:layout_marginStart="16dp"
		android:background="@drawable/btn_descrip"
		android:backgroundTint="@color/button_descrip"
		app:layout_constraintBottom_toTopOf="@+id/descrip_next"
		app:layout_constraintCircleRadius="21dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.451"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline2"
		app:layout_constraintVertical_bias="0.469" />

	<View
		android:id="@+id/view1"
		android:layout_width="7dp"
		android:layout_height="7dp"
		android:background="@drawable/btn_descrip"
		android:backgroundTint="@color/colorAccent"
		app:layout_constraintBottom_toTopOf="@+id/descrip_next"
		app:layout_constraintCircleRadius="21dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.061"
		app:layout_constraintStart_toEndOf="@+id/view"
		app:layout_constraintTop_toTopOf="@+id/guideline2"
		app:layout_constraintVertical_bias="0.469" />

</androidx.constraintlayout.widget.ConstraintLayout>